# jupyter-logs-analysis

./: README.md  app.py  app_config.yaml  db_structures.py  pyproject.toml
analysis/: 00-dataset-example.ipynb  01-sample-analysis.ipynb  02-0-time-analysis.ipynb  02-01-transitions-analysis.ipynb  02-time-analysis.ipynb  03-graph-analysis.ipynb  04-0-workflow-labels-analysis.ipynb  04-1-workflow-transitions-analysis.ipynb  04-complexity-analysis.ipynb  04-labels-transitions.ipynb  05-code-evolution-analysis.ipynb  05-evolution-analysis.ipynb  6-workflow-analysis.ipynb  analysis_utils.py  check_metrics.ipynb  complexity_analysis.ipynb  data_config.yaml  data_loading.py  data_preprocessing.py  evolution_analysis.ipynb  graph_analysis.ipynb  labels-transitions.ipynb  metrics_calculation.py  transitions_analysis.ipynb
analysis/dataset/: june_dataset.py
analysis/metrics/: graph_tools.py  june_dataset.py  mertics_runner.py  metrics_base.py  metrics_cells.py  metrics_graph.py  metrics_runner.py  metrics_time.py  metrics_transtions.py  preprocessing.py
analysis/metrics/utils/: graph_tools.py
analysis/sequence_processor/: sequence.py  sequence_test.py  snapshots.py
data/: action_id_single_label_mapping.csv  graph_evolution.csv  labels_mapping.csv  mapping_19_09.csv  sample_overview.csv  test_db.db
extension/mining_logs/: description.yaml  main.js
sequence_processor/: sequence.py  sequence_test.py  snapshot_base.py  snapshots.py
server/: app.py  app_config.yaml  db_structures.py
server/templates/: db_template.html
streamlit_app/: data_tools.py  evolution.py  graph_tools.py  sequence.py  st_tools.py  streamlit_app.py
templates/: db_template.html
web/: streamlit_app.py
